ptrip - doti.awk 1.01 -> 1.02; lib update

--- a/shawk/awk/ptrip/changelog.txt
+++ b/shawk/awk/ptrip/changelog.txt
@@ -1,3 +1,7 @@
+2021-11-30
+	doti.awk 1.01 -> 1.02
+	awklib_gtree.awk version updated
+	
 2021-11-11
 	ptrip.awk 1.0 -> 1.01
 	ptrip parser now made with Olvl=5
