--- a/shawk/awk/awklib/changelog.txt
+++ b/shawk/awk/awklib/changelog.txt
@@ -1,3 +1,8 @@
+2022-01-18
+	awklib_prefix_tree.awk 1.2 -> 1.3
+	pft_insert(), pft_path_has(), pft_rm() optimized
+	_pft_add() returns result
+	
 2022-01-14
 	awklib_prefix_tree.awk 1.1 -> 1.2
 	pft_insert() optimized; no more array transformations
