--- a/shawk/awk/awkson/changelog.txt
+++ b/shawk/awk/awkson/changelog.txt
@@ -1,3 +1,7 @@
+2022-01-18
+	awkson.awk 1.11 -> 1.12
+	updated to awklib_prefix_tree.awk 1.3
+
 2022-01-14
 	awkson.awk 1.1 -> 1.11
 	updated to awklib_prefix_tree.awk 1.2
