--- a/shawk/awk/lex-build/changelog.txt
+++ b/shawk/awk/lex-build/changelog.txt
@@ -1,3 +1,9 @@
+2022-01-18
+	lex-awk.awk   1.411 -> 1.412
+	lex-c.awk     1.41 -> 1.42
+	lex-first.awk 1.21 -> 1.22
+	all updated to awklib_prefix_tree.awk 1.3
+
 2022-01-14
 	lex-awk.awk   1.41 -> 1.411
 	lex-c.awk     1.4 -> 1.41
