--- a/shawk/awk/rdpg/changelog.txt
+++ b/shawk/awk/rdpg/changelog.txt
@@ -1,3 +1,7 @@
+2022-01-18
+	rdpg.awk 1.311 -> 1.312
+	updated to awklib_prefix_tree.awk 1.3
+
 2022-01-14
 	rdpg.awk 1.31 -> 1.311
 	updated to awklib_prefix_tree.awk 1.2
