--- a/shawk/awk/awklib/changelog.txt
+++ b/shawk/awk/awklib/changelog.txt
@@ -1,3 +1,6 @@
+2022-01-24
+	added awklib_bitwise.awk 1.0
+	
 2022-01-18
 	awklib_prefix_tree.awk 1.2 -> 1.3
 	pft_insert(), pft_path_has(), pft_rm() optimized
