--- a/shawk/awk/awklib/changelog.txt
+++ b/shawk/awk/awklib/changelog.txt
@@ -1,3 +1,7 @@
+2022-01-27
+	awklib_ch_num.awk 1.0 -> 1.1
+	hex constants replaced with decimals; portable across awk implementations
+
 2022-01-24
 	added awklib_bitwise.awk 1.0
 	
