--- a/shawk/awk/awklib/changelog.txt
+++ b/shawk/awk/awklib/changelog.txt
@@ -1,3 +1,6 @@
+2022-02-07
+	awklib_graph.awk 1.0 added
+	
 2022-01-27
 	awklib_ch_num.awk 1.0 -> 1.1
 	hex constants replaced with decimals; portable across awk implementations
