--- a/shawk/awk/lex-build/changelog.txt
+++ b/shawk/awk/lex-build/changelog.txt
@@ -1,3 +1,7 @@
+2022-03-06
+	lex-c.awk 1.7 -> 1.8
+	lex_save_ch_usr(lex_state * lex, char ch) added
+	
 2022-02-06
 	c-vs-flex/generate-lex.sh now uses G_AWK
 	
