--- a/shawk/awk/lex-build/changelog.txt
+++ b/shawk/awk/lex-build/changelog.txt
@@ -1,3 +1,14 @@
+2022-03-20
+	_lb_lib_common.awk 1.111 -> 1.2
+	First column of input is now everything but the last field, second column of
+	input is the last field. E.g.
+	function call TOK_FCALL -> 'function call' 'TOK_FCALL'
+
+	Updated to _lb_lib_common.awk 1.2
+	lex-first.awk 1.3 -> 1.4
+	lex-c.awk 1.8 -> 1.9
+	lex-awk.awk 1.5 -> 1.6
+
 2022-03-06
 	lex-c.awk 1.7 -> 1.8
 	lex_save_ch_usr(lex_state * lex, char ch) added
