--- a/shawk/awk/ptrip/changelog.txt
+++ b/shawk/awk/ptrip/changelog.txt
@@ -1,3 +1,7 @@
+2022-03-20
+	ptrip.awk 1.01 -> 1.1
+	updated to the lex-build
+
 2021-11-30
 	doti.awk 1.01 -> 1.02
 	awklib_gtree.awk version updated
