--- a/shawk/awk/rdpg/changelog.txt
+++ b/shawk/awk/rdpg/changelog.txt
@@ -1,3 +1,7 @@
+2023-01-17
+	rdpg.awk 1.312 -> 1.4
+	spaces at EOL bug  bug fixed
+
 2022-01-18
 	rdpg.awk 1.311 -> 1.312
 	updated to awklib_prefix_tree.awk 1.3
