--- a/shawk/awk/awklib/changelog.txt
+++ b/shawk/awk/awklib/changelog.txt
@@ -1,3 +1,7 @@
+2024-06-11
+	awklib_str_set.awk 1.1 - str_set_*_arr() function added
+	awklib_str_set.awk 1.0 added with tests
+
 2024-06-10
 	awklib_str_set.awk 1.0 added with tests
 	awklib_eos.awk 1.0.1 - minor improvements
