--- a/shawk/awk/awklib/changelog.txt
+++ b/shawk/awk/awklib/changelog.txt
@@ -1,4 +1,5 @@
 2024-06-11
+	'make sure' added
 	awklib - static variable prefixes updated
 	awklib_hex2dec.awk  1.0 added with tests
 	awklib_str_list.awk 1.0 added with tests
