lex-build lex-awk.awk 1.7.1

--- a/shawk/awk/lex-build/changelog.txt
+++ b/shawk/awk/lex-build/changelog.txt
@@ -1,3 +1,7 @@
+2024-09-02
+	lex-awk.awk 1.7.1
+	lex_read_line() added, handles new line positioning
+
 2024-09-01
 	lex-awk.awk 1.7
 	str_pos added + test
