--- a/shawk/awk/ptrip/changelog.txt
+++ b/shawk/awk/ptrip/changelog.txt
@@ -1,3 +1,7 @@
+2024-09-22
+	ptrip.awk 1.2.2
+	bugfix - minor bug fixed by lex-awk.awk 1.7.2
+
 2024-09-02
 	ptrip.awk 1.2.1
 	fixed a minor bug by introducing lex-awk.awk 1.7.1
