--- a/shawk/awk/structs/changelog.txt
+++ b/shawk/awk/structs/changelog.txt
@@ -1,3 +1,7 @@
+2024-12-15
+	structs.awk 1.2
+	- generational index added
+
 2024-08-06
 	structs.awk 1.1
 	- added optional type for members; if it exists it's checked when set
