--- a/shawk/awk/rdpg/changelog.txt
+++ b/shawk/awk/rdpg/changelog.txt
@@ -1,3 +1,7 @@
+2025-02-19
+	rdpg-comp.awk 2.1.3
+	does not perform conflict checks again if Sync is off
+
 2025-02-18
 	rdpg-comp.awk 2.1.2
 	bugfix: Sync != default does not break the conflict checks
