--- a/shawk/awk/rdpg/changelog.txt
+++ b/shawk/awk/rdpg/changelog.txt
@@ -1,4 +1,8 @@
 2025-02-19
+	rdpg-to-c.awk 2.1.1
+	set search now looped
+	err_crit() removed
+
 	rdpg-comp.awk 2.1.3
 	does not perform conflict checks again if Sync is off
 
