--- a/shawk/awk/rdpg/changelog.txt
+++ b/shawk/awk/rdpg/changelog.txt
@@ -1,3 +1,7 @@
+2025-06-03
+    rdpg-to-c.awk 2.2.2
+    enum parser produces better error messages
+
 2025-05-30
     rdpg-to-c.awk 2.2.1
     minor token lookup improvement
