--- a/shawk/awk/structs/changelog.txt
+++ b/shawk/awk/structs/changelog.txt
@@ -1,3 +1,7 @@
+2025-06-07
+    structs.awk 1.3
+    - bugfix: prefix for _ent_set() _ent_get() in *_clear()
+
 2024-12-15
 	structs.awk 1.2
 	- generational index added
