--- a/shawk/awk/rdpg/changelog.txt
+++ b/shawk/awk/rdpg/changelog.txt
@@ -1,5 +1,7 @@
 2025-06-22
-	rdpg-comp.awk 2.2.2
+	rdpg-to-c.awk   2.2.4
+	rdpg-to-awk.awk 2.1.3
+	rdpg-comp.awk   2.2.2
 	tok factored out in the lexer
 	better error messages
 
