--- a/shawk/awk/rdpg/changelog.txt
+++ b/shawk/awk/rdpg/changelog.txt
@@ -1,3 +1,7 @@
+2025-07-03
+	rdpg-comp.awk 2.2.3
+	better post-parse error messages
+
 2025-06-22
 	rdpg-to-c.awk   2.2.4
 	rdpg-to-awk.awk 2.1.3
@@ -6,34 +10,34 @@
 	better error messages
 
 2025-06-07
-    rdpg-comp.awk   2.2.1
-    rdpg-to-c.awk   2.2.3
-    rdpg-to-awk.awk 2.1.2
-    prettier error messages
-    structs 1.3 used
+	rdpg-comp.awk   2.2.1
+	rdpg-to-c.awk   2.2.3
+	rdpg-to-awk.awk 2.1.2
+	prettier error messages
+	structs 1.3 used
 
 2025-06-03
-    better makefile structure
+	better makefile structure
 
-    rdpg-to-c.awk 2.2.2
-    enum parser produces better error messages
+	rdpg-to-c.awk 2.2.2
+	enum parser produces better error messages
 
 2025-05-30
-    rdpg-to-c.awk 2.2.1
-    minor token lookup improvement
-    negative enum tests added
+	rdpg-to-c.awk 2.2.1
+	minor token lookup improvement
+	negative enum tests added
 
-    to-c, to-awk tests refactored
+	to-c, to-awk tests refactored
 
-    rdpg-to-c.awk 2.2.0
-    -vTokHack tests fixed
-    -vTokEnum implemented
+	rdpg-to-c.awk 2.2.0
+	-vTokHack tests fixed
+	-vTokEnum implemented
 
-    to-awk small test fixes
+	to-awk small test fixes
 
 2025-05-26
-    rdpg-comp.awk 2.2.0
-    -vSync=<sync-spec> implemented
+	rdpg-comp.awk 2.2.0
+	-vSync=<sync-spec> implemented
 
 2025-02-19
 	rdpg-to-c.awk 2.1.1
